testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_block_comment/case4.expect.out
error: unterminated string interpolation
  ==> case4.cj:14:11:
   | 
14 |     "cangjie ${/*}"
   |     ~        ^^^^^^^ unterminated string interpolation
   |     |
   |     because it is in single-line string
   | 

1 error generated, 1 error printed.
